ocaml (3.09.1-3) unstable; urgency=low

  * Enable ocaml-mode for emacs-snapshot (Closes: #347917).

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Fri, 13 Jan 2006 15:43:06 +0100

ocaml (3.09.1-2) unstable; urgency=low

  [ Samuel Mimram ]
  * Cleaning ocaml-md5sums, closes: #346279.

  [ Julien Cristau ]
  * build-arch is a phony target.
  * Add patch to make ocamlopt -output-obj and ocamlopt -pack call the linker
    via gcc instead of directly, which allows us to pass the same linking
    options in these cases and in the common case (where ocamlopt already used
    gcc). This should unbreak ocamlopt -pack on alpha, and thus fix the build
    failure of camomile.

 -- Julien Cristau <julien.cristau@ens-lyon.org>  Thu, 12 Jan 2006 15:33:00 +0100

ocaml (3.09.1-1) unstable; urgency=low

  [ Samuel Mimram ]
  * Removing possibly leftover /usr/lib/ocaml/ld.conf, closes: #300846.
  * Updated objinfo.dpatch.
  * Added dumpobj.dpatch to install ocamldumpobj.
  * Added a rule in rules to generate (manually) ocaml-source.files and
    updated ocaml-source.files.
  * Added a watch file.

  [ Julien Cristau ]
  * New upstream release
    + sparc is correctly detected and alignment of doubles and 64-bit ints on
      double-word boundaries is forced (Closes: #344615).
  * Remove Suggests on xlibs-dev which doesn't exist anymore.

 -- Samuel Mimram <smimram@debian.org>  Wed,  4 Jan 2006 20:32:13 +0100

ocaml (3.09.0-4) unstable; urgency=low

  [ Julien Cristau ]
  * debian/rules: the abi-sed rule is phony, we don't want to run configure
    twice.
  * Stop building the native compilers on hppa, they are buggy and upstream
    considers this port dead (see bug#342704).

  [ Samuel Mimram ]
  * Added for_pack_static.dpatch (from CVS) to correct a bug when linking,
    disabled for now though.
  * Added myself to uploaders.

  [ Julien Cristau ]
  * Install the list of architectures with native compilers in the ocaml-nox
    package.

  [ Sven Luther ]