@@ -4,4 +4,4 @@ dumpobj
 man-ocamlmklib
 kbsd-gnu
 alpha_ld_no-relax
-call_ld_via_gcc
+call_ld_with_proper_flags
