@@ -1,23 +1,31 @@
 #! /bin/sh /usr/share/dpatch/dpatch-run
-## call_ld_via_gcc.dpatch by Julien Cristau <julien.cristau@ens-lyon.org>
+## call_ld_with_proper_flags.dpatch by Julien Cristau <julien.cristau@ens-lyon.org>
 ##
 ## All lines beginning with `## DP:' are a description of the patch.
-## DP: Make ocamlopt -output-obj and -pack call ld via gcc instead of 
-## DP: directly, so the options we pass to it can be the same as in the normal 
-## DP: linking case
+## DP: Filter linkflags passed to ld by ocamlopt -pack and -output-obj
+## DP: to remove the "-Wl," parts, which are only used when ocamlopt calls
+## DP: gcc.
 
 @DPATCH@
 
 --- ocaml-3.09.1.orig/Makefile	2005-09-24 18:20:36.000000000 +0200
 +++ ocaml-3.09.1/Makefile	2006-01-12 10:17:42.000000000 +0100
+@@ -313,6 +313,7 @@
+ partialclean::
+        rm -f ocaml toplevel/toplevellib.cma
+ 
++Wl = -Wl,
+ # The configuration file
+ 
+ utils/config.ml: utils/config.mlp config/Makefile
 @@ -324,8 +324,8 @@
              -e 's|%%BYTELINK%%|$(BYTECC) $(BYTECCLINKOPTS)|' \
              -e 's|%%NATIVECC%%|$(NATIVECC) $(NATIVECCCOMPOPTS)|' \
              -e 's|%%NATIVELINK%%|$(NATIVECC) $(NATIVECCLINKOPTS)|' \
 -            -e 's|%%PARTIALLD%%|ld -r $(NATIVECCLINKOPTS)|' \
 -            -e 's|%%PACKLD%%|ld -r $(NATIVECCLINKOPTS)|' \
-+            -e 's|%%PARTIALLD%%|gcc -nostdlib -Wl,-r $(NATIVECCLINKOPTS)|' \
-+            -e 's|%%PACKLD%%|gcc -nostdlib -Wl,-r $(NATIVECCLINKOPTS)|' \
++            -e 's|%%PARTIALLD%%|ld -r $(subst $(Wl),,$(NATIVECCLINKOPTS))|' \
++            -e 's|%%PACKLD%%|ld -r $(subst $(Wl),,$(NATIVECCLINKOPTS))|' \
              -e 's|%%BYTECCLIBS%%|$(BYTECCLIBS)|' \
              -e 's|%%NATIVECCLIBS%%|$(NATIVECCLIBS)|' \
              -e 's|%%RANLIBCMD%%|$(RANLIBCMD)|' \
