@@ -1,8 +1,14 @@
 ocaml (3.09.1-3) unstable; urgency=low
 
   * Enable ocaml-mode for emacs-snapshot (Closes: #347917).
+  * Change the patch added in 3.09.1-2, because it broke ocamlopt -pack on
+    sparc (we now filter link options to remove the "-Wl," part, and then use
+    ld). Thanks to Sylvain Le Gall for noticing, and to Samuel Thibault for
+    his help debugging this (Closes: #351853).
+  * [debian/rules] Make install-* depend on build-*, and tweak the rules to
+    not rerun configure in the 'binary' phase.
 
- -- Julien Cristau <julien.cristau@ens-lyon.org>  Fri, 13 Jan 2006 15:43:06 +0100
+ -- Julien Cristau <julien.cristau@ens-lyon.org>  Thu,  9 Feb 2006 15:14:43 +0100
 
 ocaml (3.09.1-2) unstable; urgency=low
 
